# stardew-discord-bot

./: .dockerignore  .env.example  .gitignore  .gitmessage  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  data-licensing.md  deployment.md  discord-setup.md  getting-started.md  marketing-checklist.md  ops.md  oracle-setup.md
public/: index.html  script.js  style.css
scripts/: git-pre-commit.sh
src/stardew_bot/: __init__.py  __main__.py  bot.py  config.py  i18n.py
src/stardew_bot/commands/: __init__.py  crop.py  fish.py  funfact.py  help.py  npc.py  quiz.py  tooling.py  wiki.py
src/stardew_bot/locales/: de.json  en.json
src/stardew_bot/services/: __init__.py  news_service.py  social_service.py  steam_service.py  update_notifier.py  wiki_service.py
src/stardew_bot/utils/: logging.py
tests/: test_config.py  test_i18n.py  test_update_notifier.py  test_wiki_service.py
